--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -6,7 +6,7 @@
         <meta name="author" content="John Golden">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <title>Archives | John Golden</title>
+        <title>About | John Golden</title>
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -404,18 +404,22 @@ article .meta a.comments_btn:hover {
         </header>
 
         <div id="wrap">
-<div class="container list">
-    <article>
-        <h1 style="margin-bottom: 30px;">Tag: tag with spaces</h1>
 
-        <ul class="double-list">
-            <li>
-                <a href='/blog/2018/07/29/starting-over-again/'>
-                    <h2>Starting over again</h2>
-                    <span>07.29.2018</span>
-                </a>
-            </li>
-        </ul>
+<div class="container post">
+    <article>
+<!--        <header class="about">
+          <h1>About</h1>
+	  <div class="social-links">
+	    <ul>
+	      <li><a href="http://johngolden.github.io/" rel="me">website</a></li>
+	      <li><a class="nodec icon-github" href="http://github.com/johngolden" rel="me"></a></li>
+	    </ul>
+        </header>
+-->
+        <div class="article_content">
+            <p>yo waddup dawg</p>
+        </div>
+
     </article>
 </div>
         </div>
