--- a/output/tags.html
+++ b/output/tags.html
@@ -395,19 +395,20 @@ article .meta a.comments_btn:hover {
                   <a class="navbar-brand" href="/" title="Home" class="title">John Golden</a>
                 </div>
                 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation" id="theNavbar">
-		    <ul class="nav navbar-nav navbar-left">
-                            <li><a href="/recipes" title="recipes">recipes</a></li>
-                            <li><a href="/music" title="music">music</a></li>
+            <ul class="nav navbar-nav navbar-right">
+                            <li><a href="/pages/about.html" title="About">About</a></li>
+                            <li><a href="/archives.html" title="Archive">Archive</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
         <div id="wrap">
-    <h1>Tags for John Golden</h1>        <li><a href="http://johngolden.github.io/tag/a-tag.html">a tag</a> (1)</li>
-        <li><a href="http://johngolden.github.io/tag/tag-with-spaces.html">tag with spaces</a> (1)</li>
-        <li><a href="http://johngolden.github.io/tag/tag2.html">tag2</a> (1)</li>
-        <li><a href="http://johngolden.github.io/tag/tag3.html">tag3</a> (1)</li>
+    <h1>Tags for John Golden</h1>        <li><a href="/tag/a-tag.html">a tag</a> (1)</li>
+        <li><a href="/tag/ipynb.html">ipynb</a> (1)</li>
+        <li><a href="/tag/tag-with-spaces.html">tag with spaces</a> (1)</li>
+        <li><a href="/tag/tag2.html">tag2</a> (2)</li>
+        <li><a href="/tag/tag3.html">tag3</a> (1)</li>
         </div>
 <!--
     <footer>
