--- a/output/archives.html
+++ b/output/archives.html
@@ -395,9 +395,9 @@ article .meta a.comments_btn:hover {
                   <a class="navbar-brand" href="/" title="Home" class="title">John Golden</a>
                 </div>
                 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation" id="theNavbar">
-		    <ul class="nav navbar-nav navbar-left">
-                            <li><a href="/recipes" title="recipes">recipes</a></li>
-                            <li><a href="/music" title="music">music</a></li>
+            <ul class="nav navbar-nav navbar-right">
+                            <li><a href="/pages/about.html" title="About">About</a></li>
+                            <li><a href="/archives.html" title="Archive">Archive</a></li>
                     </ul>
                 </nav>
             </div>
@@ -409,21 +409,28 @@ article .meta a.comments_btn:hover {
         <h1 style="margin-bottom: 30px;">Archives and tags</h1>
 
         <div class="meta" style="margin-bottom: 30px;">
-                <a href="http://johngolden.github.io/tag/tag2.html" class="tag">tag2 (1)</a>
-                <a href="http://johngolden.github.io/tag/tag3.html" class="tag">tag3 (1)</a>
-                <a href="http://johngolden.github.io/tag/tag-with-spaces.html" class="tag">tag with spaces (1)</a>
-                <a href="http://johngolden.github.io/tag/a-tag.html" class="tag">a tag (1)</a>
+                <a href="/tag/ipynb.html" class="tag">ipynb (1)</a>
+                <a href="/tag/tag2.html" class="tag">tag2 (2)</a>
+                <a href="/tag/tag3.html" class="tag">tag3 (1)</a>
+                <a href="/tag/tag-with-spaces.html" class="tag">tag with spaces (1)</a>
+                <a href="/tag/a-tag.html" class="tag">a tag (1)</a>
         </div>
 
         <ul class="double-list">
             <li>
-                <a href='http://johngolden.github.io/blog/2018/07/29/starting-over-again/'>
+                <a href='/blog/2018/07/29/a-sample-ipynb-post/'>
+                    <h2>A Sample IPYNB post</h2>
+                    <span>07.29.2018</span>
+                </a>
+            </li>
+            <li>
+                <a href='/blog/2018/07/29/starting-over-again/'>
                     <h2>Starting over again</h2>
                     <span>07.29.2018</span>
                 </a>
             </li>
             <li>
-                <a href='http://johngolden.github.io/blog/2017/09/02/hello-world/'>
+                <a href='/blog/2017/09/02/hello-world/'>
                     <h2>hello world</h2>
                     <span>09.02.2017</span>
                 </a>
