--- a/output/authors.html
+++ b/output/authors.html
@@ -395,9 +395,9 @@ article .meta a.comments_btn:hover {
                   <a class="navbar-brand" href="/" title="Home" class="title">John Golden</a>
                 </div>
                 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation" id="theNavbar">
-		    <ul class="nav navbar-nav navbar-left">
-                            <li><a href="/recipes" title="recipes">recipes</a></li>
-                            <li><a href="/music" title="music">music</a></li>
+            <ul class="nav navbar-nav navbar-right">
+                            <li><a href="/pages/about.html" title="About">About</a></li>
+                            <li><a href="/archives.html" title="Archive">Archive</a></li>
                     </ul>
                 </nav>
             </div>
@@ -406,7 +406,7 @@ article .meta a.comments_btn:hover {
         <div id="wrap">
     <h1>Authors on John Golden</h1>
 
-    <ul>        <li><a href="http://johngolden.github.io/author/john-golden.html">John Golden</a> (2)</li>
+    <ul>        <li><a href="/author/john-golden.html">John Golden</a> (3)</li>
     </ul>
         </div>
 <!--
