--- a/output/categories.html
+++ b/output/categories.html
@@ -395,9 +395,9 @@ article .meta a.comments_btn:hover {
                   <a class="navbar-brand" href="/" title="Home" class="title">John Golden</a>
                 </div>
                 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation" id="theNavbar">
-		    <ul class="nav navbar-nav navbar-left">
-                            <li><a href="/recipes" title="recipes">recipes</a></li>
-                            <li><a href="/music" title="music">music</a></li>
+            <ul class="nav navbar-nav navbar-right">
+                            <li><a href="/pages/about.html" title="About">About</a></li>
+                            <li><a href="/archives.html" title="Archive">Archive</a></li>
                     </ul>
                 </nav>
             </div>
@@ -405,7 +405,7 @@ article .meta a.comments_btn:hover {
 
         <div id="wrap">
 <ul>
-    <li><a href="http://johngolden.github.io/category/articles.html">articles</a></li>
+    <li><a href="/category/articles.html">articles</a></li>
 </ul>
         </div>
 <!--
